--- a/index.html
+++ b/index.html
@@ -598,7 +598,20 @@
                             //tile is selected
                             ctx.fillRect(seatTileLocations[game.seat][i][0]+25,seatTileLocations[game.seat][i][1]-25,10,10);
                         }
-                    }   
+                    }  
+
+                    //highlight all other players tiles
+                    for(var i = 0; i < game.seatsPairs.length; i++){
+                        if(game.seatsPairs[i] != null){
+                            for(var j = 0; j < game.seatsPairs[i].length; j++){
+                                for(var k = 0; k < game.seatsTiles[i].length; k++){
+                                    if(game.seatsTiles[i][k] == game.seatsPairs[i][j]){
+                                        ctx.fillRect(seatTileLocations[i][k][0]+25,seatTileLocations[i][k][1]-25,10,10);
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
 
                 var highlightDealerSelection = function(){
@@ -814,6 +827,8 @@
                 // resetTileDivs();
                 game.clickedTiles = [];
                 game.dealerSelection = [];
+                game.seatsTiles = [];
+                game.seatsPairs = [];
             }
 
             function resetTileDivs(){
@@ -910,6 +925,7 @@
                         for(var i = 0; i < 7; i++){
                             if(game.occupiedSeats[i] == id){
                                 game.seatsTiles[i] = tiles;
+                                game.seatsPairs[i] = pair;
                             }
                         }
                     }
