Began trying to reduce server load for sounds
Each time the sound is played, it reloads from the server. Tried to find
a way to only load once. Also, consider not using MP3 (strict licensing)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+    <!-- <audio id="betUp" src="/sound/betUp.wav"></audio> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
