Added experience updates, display for player information

--- a/index.html
+++ b/index.html
@@ -15,39 +15,9 @@
 	<script type="text/javascript" src="client.js"></script>
 
 	<div id="container">
-	  <div id="topbar"></div>
+	  <div id="topbar"><span></span></div>
 	  <div id="leftbar"></div>
 	  <div id="gamewindow">
-    	<!-- <div id="buttons">
-    		 <div id="betting Buttons">
-    		   <button id="bet5">Bet $5</button>
-    		   <button id="bet10">Bet $10</button>
-    		   <button id="bet25">Bet $25</button>
-    		   <button id="lockBet">Lock bet</button>
-    		   <button id="unlockBet">Unlock bet</button>
-    		 </div>
-    		 <div id="tileButtons">
-    		   <button id="lockPair">Lock Selection</button>
-    		   <button id="unlockPair">Unock Selection</button>
-    		 </div>
-    		 <div id="miscButtons">
-    		   <button id="quit">Quit</button>
-    		 </div>
-    		 <div id="gameInformation">
-    		   
-    		 </div>
-    		 <div id="tileSelection">
-    		   <div class="tile" id='one'>
-    		   </div>
-    		   <div class="tile" id='two'>
-    		   </div>
-    		   <div class="tile" id='three'>
-    		   </div>
-    		   <div class="tile" id='four'>
-    		   </div>
-    		 </div>
-    	</div> -->
-
         <canvas id="game"></canvas>
 
     	<div>
