Made the exit page less ugly

--- a/exitPage.html
+++ b/exitPage.html
@@ -1,12 +1,23 @@
 <html>
 
-	<head>
-	</head>
+  <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-	<title>Pai Gow</title>
+  <title>Pai Gow</title>
 
-	<body>
-		Thanks for playing!
-	</body>
+  <body>
+	<div id="container">
+	  <div id="topbar"><span></span></div>
+	  <div id="leftbar"></div>
+	  <div id="gamewindow">
+	  	Thanks for playing
+	  </div>
+	  <div id="rightbar"></div>
+	</div>
+
+  </body>
+
+
 
 </html>
