--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
         <canvas id="game"></canvas>
 
     	<div>
-    	  <ul id="messages"></ul>
+    	  <!-- <ul id="messages"></ul> -->
+          <div id="messages">
+            <script type="text/javascript">
+                var QuickTalk_gameName = '<your game name>';
+            </script>
+            <script type="text/javascript" src="http://students.cse.tamu.edu/ctrinh/QuickTalk/master/quicktalk.js"></script>
+          </div>
     	</div>
 
 	  </div>
