--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
     	<div>
     	  <!-- <ul id="messages"></ul> -->
           <div id="messages">
-            <script type="text/javascript">
-                var QuickTalk_gameName = '<your game name>';
-            </script>
-            <script type="text/javascript" src="http://students.cse.tamu.edu/ctrinh/QuickTalk/master/quicktalk.js"></script>
+            <iframe src="http://54.186.160.170/chat"></iframe>
           </div>
     	</div>
 
