--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <body>
 
+  <!--security problem-->
+  <script>var playerEmail="ake8rjhs94ydkjs8"</script>
 	<script type="text/javascript" src="client.js"></script>
 
 	<div id="container">
