Made the chat fit the screen better.
This new branch is to be used in case the lobby remains unusable, we
will still be able to demo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     	<div>
     	  <!-- <ul id="messages"></ul> -->
           <div id="messages">
-            <iframe src="http://54.186.160.170/chat"></iframe>
+            <iframe id="chat" src="http://54.186.160.170/chat"></iframe>
           </div>
     	</div>
 
