--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 	<script type="text/javascript" src="client.js"></script>
 
 	<div id="container">
-	  <div id="topbar"><span></span></div>
-	  <div id="leftbar"></div>
+	  <div id="topbar"><span></span>
+    </div>
+	  <div id="leftbar">
+      <a href="./InfoPage.html" onclick="window.open(this.href, 'mywin',
+'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" >Click here for Pai Gow Info</a>
+    </div>
 	  <div id="gamewindow">
         <canvas id="game"></canvas>
 
