Added new button for exiting

--- a/destroyedTablePage.html
+++ b/destroyedTablePage.html
@@ -9,7 +9,8 @@
   <body>
 	<div id="container">
 	  <div id="topbar"><span></span></div>
-	  <div id="leftbar"></div>
+	  <div id="leftbar">
+		</div>
 	  <div id="gamewindow">
 	  	<h1>Oh no! A player left the table during the game!</h1>
 
@@ -19,7 +20,5 @@
 	</div>
 
   </body>
-
-
 
 </html>
