Removed old exit button, tried to fix chat height

--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
       <input type="button" id="exitButton" value="Exit at end of round" class="off" onclick="toggleState(this)"/>
     </div>
 </div>
-    </div>
+    <!-- </div> -->
 	  <div id="gamewindow">
         <canvas id="game"></canvas>
 
-    	<div>
     	  <!-- <ul id="messages"></ul> -->
           <div id="messages">
             <iframe id="chat" src="http://54.186.160.170/chat"></iframe>
           </div>
     	</div>
 
-	  </div>
+	  <!-- </div> -->
 	  <div id="rightbar"></div>
 	</div>
 
